syntax = "proto3";
option go_package = "./;helloworldProto";//创建go文件的包
service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}